# OshiClip

./: .gitignore  README.md  UI-spec.md  index.html  oshiclip-desktop-design.md  package-lock.json  package.json  vods-oshi-desktop-design.md
.github/workflows/: native-release.yml  windows-native.yml
scripts/: check-release-version.mjs  generate-updater-manifest.mjs  generate-updater-manifest.test.mjs  verify-macos-bundle.sh  verify-windows-bundle.ps1
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: binary_manager.rs  command_builder.rs  error.rs  executor.rs  external_navigation.rs  history.rs  lib.rs  main.rs  manifest.rs  models.rs  vod_library.rs
src/components/: UpdateDialog.tsx  VodStreamerAvatar.tsx
src/lib/: appUpdate.test.ts  appUpdate.ts  deepLink.test.ts  deepLink.ts  desktop.ts  downloadActivity.test.ts  downloadActivity.ts  externalService.test.ts  externalService.ts  filenameTemplate.test.ts  filenameTemplate.ts  history.test.ts  history.ts  time.test.ts  time.ts  uiPreferences.test.ts  uiPreferences.ts  vodLibrary.test.ts  vodLibrary.ts
src/views/: AuroraView.test.tsx  AuroraView.tsx  DownloadView.test.tsx  DownloadView.tsx  HistoryView.tsx  OnlineServiceView.test.tsx  OnlineServiceView.tsx  SettingsView.tsx  ToolsView.tsx  VodLibraryView.tsx
